popup-map-api/src/main/java/com/example/popupmapapi/common/error/FieldErrorResponse.java
package com.example.popupmapapi.common.error;

public record FieldErrorResponse(
        String field,
        String message
) {
}
